--- a/Projects.html
+++ b/Projects.html
@@ -45,7 +45,7 @@
                   Created graph feature to show progression of one rep-max, weight, and volume of lifts
                   </li>
                 </ul>
-                <a href="fitnesslogger.ryankutella.com">Go To</a>
+                <a href="https://fitnesslogger.ryankutella.com">Go To</a>
               </div>
               
               <div class="card">
