--- a/Projects.html
+++ b/Projects.html
@@ -12,9 +12,9 @@
             <h1>Ryan Kutella</h1>
             </div>
             <div class="headerMiddle">    
-                <a class="tabs" href="AboutMe.html">About Me</a>
+                <a class="tabs" href="index.html">About Me</a>
                 <a class="tabs" href="Projects.html">Projects</a>
-                <a class="tabs" href="Extra.html">Extra</a>
+                <!-- <a class="tabs" href="Extra.html">Extra</a> -->
             </div>
             <div class="headerRight">
                 <p class="links"><a href="https://www.linkedin.com/in/ryankutella/" target="_blank"><ion-icon class="links" name="logo-linkedin"></ion-icon></a></p>
@@ -30,7 +30,7 @@
             <div class="cardHolder">
               <div class="card">
                 <h3>RyFit Fitness Logger</h3>
-                <p>Dec 2023 - Jan 2024</p>
+                <p>React Native JS Framework</p>
                 <ul>
                   <li>
                   Built a JavaScript app using React Native framework, Firebase authentication, and Firestore data storage
@@ -45,7 +45,7 @@
                   Created graph feature to show progression of one rep-max, weight, and volume of lifts
                   </li>
                 </ul>
-                
+
                 <a href="https://fitnesslogger.ryankutella.com">Go To</a>
               </div>
               
@@ -66,12 +66,12 @@
                   Added advanced graphics, using raytracing and shaders
                   </li>
                 </ul>
-                <a href="google.com">Go To</a>
+                <a href="">N/A</a>
               </div>
             </div>
             <br><br><br>
 
-            <h1>Personal Projects</h1>
+            <!-- <h1>College Projects</h1>
             <div class="cardHolder">
               <div class="card">
                 <h3>RyFit Fitness Logger</h3>
@@ -115,7 +115,7 @@
             </div>
 
             <br><br><br>
-            <h1>Personal Projects</h1>
+            <h1>Highschool Projects</h1>
             <div class="cardHolder">
               <div class="card">
                 <h3>RyFit Fitness Logger</h3>
@@ -156,7 +156,7 @@
                 </ul>
                 <a href="google.com">Go To</a>
               </div>
-            </div>
+            </div> -->
 
         </div>
     </body>
