--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h1>Ryan Kutella</h1>
             </div>
             <div class="headerMiddle">    
-                <a class="tabs" href="AboutMe.html">About Me</a>
+                <a class="tabs" href="index.html">About Me</a>
                 <a class="tabs" href="Projects.html">Projects</a>
-                <a class="tabs" href="Extra.html">Extra</a>
+                <!-- <a class="tabs" href="Extra.html">Extra</a> -->
             </div>
             <div class="headerRight">
                 <p class="links"><a href="https://www.linkedin.com/in/ryankutella/" target="_blank"><ion-icon class="links" name="logo-linkedin"></ion-icon></a></p>
@@ -26,7 +26,7 @@
         <div class="container">
             <br>
             <div class="aboutHolder">
-                <h2>About Me</h2>
+                <h2>Who am I?</h2>
                 <p>I am Ryan Kutella from Elk Grove Village, IL. 
                     I am currently working towards my Computer Science Degree at The University of Alabama. 
                     I am passionate about software development and like turning creative ideas into a reality. 
@@ -35,7 +35,34 @@
                     I've played a large role in the web development of a multi-million dollar company and have multiple other projects displaying my skills.
                 </p>
             </div>
-            
+            <br><br>
+            <div class="aboutHolder">
+                <h2>PROGRAMMING LANGUAGES/SOFTWARE:</h2>
+                <p>React Native, React, JavaScript, C++, C#, Firebase Databases, Python, Java, HTML, CSS, Unity, Git, GitHub, Cloud Firestore, Swift, Node.js,
+                CAD, Figma, Adobe Creative Cloud Products, Microsoft Office Products, VHDL, Quartus Prime, Assembly, and Blender
+                </p>
+            </div>
+            <br><br>
+            <div class="aboutHolder">
+                <h2>Relevant Work Experience:</h2>
+                <p>Worked as an IT/Software Developer Intern at Abbott Rubber Co.
+                </p>
+                <ul>
+                    <li>
+                        Played a large role in the design and development of a new ecommerce website using HTML, CSS, and JS
+                    </li>
+                    <li>
+                        Created a streamlined user experience for both B2B and B2C interactions to increase conversion rates
+                    </li>
+                    <li>
+                        Worked with cyber security softwares to help strengthen and expand internal systems
+                    </li>
+                    <li>
+                        Assisted with coworkers’ technical needs and upgrade existing systems to increase efficiency
+                    </li>
+                    
+                </ul>
+            </div>
         </div>
     </body>
 </html>
