--- a/Extra.html
+++ b/Extra.html
@@ -12,9 +12,9 @@
             <h1>Ryan Kutella</h1>
             </div>
             <div class="headerMiddle">    
-                <a class="tabs" href="AboutMe.html">About Me</a>
+                <a class="tabs" href="index.html">About Me</a>
                 <a class="tabs" href="Projects.html">Projects</a>
-                <a class="tabs" href="Extra.html">Extra</a>
+                <!-- <a class="tabs" href="Extra.html">Extra</a> -->
             </div>
             <div class="headerRight">
                 <p class="links"><a href="https://www.linkedin.com/in/ryankutella/" target="_blank"><ion-icon class="links" name="logo-linkedin"></ion-icon></a></p>
