--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Personal Website</title>
+        <title>Ryan Kutella's Portfolio</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
