--- a/Projects.html
+++ b/Projects.html
@@ -12,8 +12,8 @@
             <h1>Ryan Kutella</h1>
             </div>
             <div class="headerMiddle">    
-                <a class="tabs" href="index.html">About Me</a>
-                <a class="tabs" href="Projects.html">Projects</a>
+                <a class="tabs" href="index.html" >About Me</a>
+                <a class="tabs" href="Projects.html" style="text-decoration: underline; text-underline-offset: 2px;">Projects</a>
                 <!-- <a class="tabs" href="Extra.html">Extra</a> -->
             </div>
             <div class="headerRight">
