--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Ryan Kutella</h1>
             </div>
             <div class="headerMiddle">    
-                <a class="tabs" href="index.html">About Me</a>
+                <a class="tabs" href="index.html" style="text-decoration: underline; text-underline-offset: 2px;">About Me</a>
                 <a class="tabs" href="Projects.html">Projects</a>
                 <!-- <a class="tabs" href="Extra.html">Extra</a> -->
             </div>
@@ -37,31 +37,19 @@
             </div>
             <br><br>
             <div class="aboutHolder">
-                <h2>PROGRAMMING LANGUAGES/SOFTWARE:</h2>
-                <p>React Native, React, JavaScript, C++, C#, Firebase Databases, Python, Java, HTML, CSS, Unity, Git, GitHub, Cloud Firestore, Swift, Node.js,
-                CAD, Figma, Adobe Creative Cloud Products, Microsoft Office Products, VHDL, Quartus Prime, Assembly, and Blender
-                </p>
+                <h2>Technical Skills</h2>
+                <p><strong>Languages: </strong>C++, Java, HTML, CSS, Python, JavaScript, C, C#, Assembly</p>
+                <p><strong>Technologies/Frameworks: </strong>React Native, React.js, Amazon Firebase & Firestore, Git, JUnit, Node.js</p>
+                <p><strong>Developer Tools: </strong>VS Code, IntelliJ, Android Studio, GitHub, Unity, Microsoft Office</p>
+                <p><strong>Design Tools: </strong>Figma, Adobe Creative Cloud, CAD, Blender</p>
             </div>
             <br><br>
             <div class="aboutHolder">
-                <h2>Relevant Work Experience:</h2>
-                <p>Worked as an IT/Software Developer Intern at Abbott Rubber Co.
-                </p>
-                <ul>
-                    <li>
-                        Played a large role in the design and development of a new ecommerce website using HTML, CSS, and JS
-                    </li>
-                    <li>
-                        Created a streamlined user experience for both B2B and B2C interactions to increase conversion rates
-                    </li>
-                    <li>
-                        Worked with cyber security softwares to help strengthen and expand internal systems
-                    </li>
-                    <li>
-                        Assisted with coworkers’ technical needs and upgrade existing systems to increase efficiency
-                    </li>
-                    
-                </ul>
+                <h2>Experience: IT/Software Developer Intern at Abbott Rubber Co.</h2>
+                <p>Play a large role in the design and development of a new ecommerce website using HTML, CSS, and JS</p>
+                <p>Create a streamlined user experience for both B2B and B2C interactions to increase conversion rates</p>
+                <p>Work with cyber security softwares to help strengthen and expand internal systems</p>
+                <p>Assist with coworkers’ technical needs and upgrade existing systems to increase efficiency</p>
             </div>
         </div>
     </body>
